--- a/map5.html
+++ b/map5.html
@@ -3,260 +3,198 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>MapLibre + GSI DEM / GSI tiles / OSM</title>
+<title>MapLibre GSI / OSM 切替デモ</title>
 <link href="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css" rel="stylesheet" />
 <style>
-  body,html,#map { height:100%; margin:0; padding:0; }
-  .panel {
-    position: absolute; top:8px; right:8px; background:rgba(255,255,255,0.9);
-    border-radius:6px; padding:8px; font-size:13px; box-shadow:0 1px 6px rgba(0,0,0,0.2);
-    max-width:260px;
-  }
-  .panel .fold { cursor:pointer; font-weight:bold; margin-bottom:6px; }
-  .row { display:flex; align-items:center; gap:6px; margin:6px 0; }
-  .small { font-size:12px; color:#444; }
-  .scale { position:absolute; left:8px; bottom:8px; background:rgba(255,255,255,0.8); padding:4px 6px; border-radius:4px; font-size:12px; }
+  body,html,#map{height:100%;margin:0;padding:0}
+  #map{position:relative}
+  .panel{position:absolute;top:8px;right:8px;background:#fff;border-radius:6px;padding:8px;box-shadow:0 1px 6px rgba(0,0,0,.2);font-size:13px;z-index:2}
+  .panel .fold{cursor:pointer;color:#0078d4;margin-bottom:6px}
+  .controls{display:block}
+  .row{margin:6px 0}
+  label{display:block;font-size:12px;margin-bottom:4px}
+  input[type=range]{width:180px}
+  .scale{position:absolute;left:8px;bottom:8px;background:#fff;padding:4px;border-radius:4px;box-shadow:0 1px 4px rgba(0,0,0,.2);font-size:12px}
 </style>
 </head>
 <body>
 <div id="map"></div>
 
 <div class="panel" id="panel">
-  <div class="fold" id="fold">▲ レイヤ / ベース切替</div>
-  <div id="controls">
-    <div class="row">
-      <select id="basemap" style="flex:1">
-        <option value="gsi-optimal-vector">国土地理院 最適化ベクトル</option>
-        <option value="gsi-std">国土地理院 標準地図</option>
-        <option value="gsi-pale">国土地理院 淡色地図</option>
-        <option value="gsi-photo">国土地理院 写真地図</option>
-        <option value="osm-raster">OpenStreetMap ラスタ</option>
-        <option value="osm-vector">OpenStreetMap ベクタ (osm-bright-ja)</option>
+  <div class="fold" id="fold">▲ レイヤ操作</div>
+  <div class="controls" id="controls">
+    <div class="row"><strong>ベースマップ</strong>
+      <select id="basemap">
+        <option value="gsi_std">国土地理院 標準地図</option>
+        <option value="gsi_pale">国土地理院 淡色地図</option>
+        <option value="gsi_photo">国土地理院 写真地図</option>
+        <option value="gsi_optvec">国土地理院 最適化ベクトル（簡易）</option>
+        <option value="osm_raster">OpenStreetMap ラスタ</option>
+        <option value="osm_bright">OSM Bright JA（ラスタ）</option>
       </select>
     </div>
 
-    <div class="row small">
-      <label>陰影起伏 不透明度</label>
-      <input id="shadeOpacity" type="range" min="0" max="1" step="0.01" value="0.6" style="flex:1" />
-    </div>
-    <div class="row small">
-      <label>合成モード</label>
-      <select id="blendMode"><option value="normal">通常</option><option value="multiply">乗算</option></select>
+    <div class="row"><strong>陰影起伏図</strong>
+      <label><input type="checkbox" id="hill_on" checked> 表示</label>
+      <label>不透明度 <input id="hill_opacity" type="range" min="0" max="1" step="0.01" value="0.6"></label>
+      <label>合成モード
+        <select id="hill_blend">
+          <option value="normal">通常</option>
+          <option value="multiply">乗算</option>
+        </select>
+      </label>
     </div>
 
-    <hr />
-
-    <div class="row small">
-      <label>標高倍率</label>
-      <input id="exaggeration" type="range" min="0.1" max="2" step="0.01" value="1" style="flex:1" />
-    </div>
-    <div class="row small">
-      <button id="toggleTerrain">地形 ON/OFF</button>
-    </div>
-    <div class="row small">
-      <div id="info" style="flex:1"></div>
+    <div class="row"><strong>地形（terrain）</strong>
+      <label><input type="checkbox" id="terrain_on"> 3D地形を有効</label>
+      <label>強調倍率 <input id="exaggeration" type="range" min="0.1" max="2" step="0.01" value="1"></label>
     </div>
   </div>
 </div>
 
-<div class="scale" id="scalebox"></div>
+<div class="scale" id="scale"></div>
 
 <script src="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js"></script>
-
 <script>
-(async function(){
-  // 初期設定
-  const center = [139.875,39.077];
-  const map = new maplibregl.Map({
-    container: 'map',
-    style: {
-      version:8,
-      sources: {},
-      layers: []
-    },
-    center: center,
-    zoom: 10
-  });
-
-  // スケール表示（左下）
-  const scaleEl = document.getElementById('scalebox');
-  map.on('move', ()=> {
-    const centerLat = map.getCenter().lat;
-    const metersPerPixel = 156543.03392 * Math.cos(centerLat * Math.PI/180) / Math.pow(2, map.getZoom());
-    scaleEl.textContent = `zoom:${map.getZoom().toFixed(2)}  m/px:${metersPerPixel.toFixed(2)}`;
-  });
-
-  // Service Worker を登録して GSI DEM PNG -> Terrain-RGB に変換するエンドポイントを作る
-  const swCode = `
-self.addEventListener('fetch', function(e){
-  const url = new URL(e.request.url);
-  if(url.pathname.startsWith('/gsi-dem/')){
-    // path: /gsi-dem/{z}/{x}/{y}.png
-    const parts = url.pathname.split('/');
-    const z = parts[2], x = parts[3], yfile = parts[4];
-    const y = yfile.split('.')[0];
-    const gsiUrl = 'https://cyberjapandata.gsi.go.jp/xyz/dem/' + z + '/' + x + '/' + y + '.png';
-    e.respondWith(fetch(gsiUrl).then(r=>r.blob()).then(async blob=>{
-      const imgBitmap = await createImageBitmap(blob);
-      const c = new OffscreenCanvas(imgBitmap.width, imgBitmap.height);
-      const ctx = c.getContext('2d');
-      ctx.drawImage(imgBitmap,0,0);
-      const img = ctx.getImageData(0,0,c.width,c.height);
-      const out = new ImageData(c.width,c.height);
-      // GSI PNG -> 標高(m) の計算（仕様に準拠）: x = R<<16 + G<<8 + B; if x < 2^23 h = x*0.01; if x > 2^23 h = (x-2^24)*0.01; x==2^23 => NA
-      for(let i=0;i<img.data.length;i+=4){
-        const R = img.data[i], G = img.data[i+1], B = img.data[i+2];
-        const xval = (R<<16) + (G<<8) + B;
-        let h;
-        if(xval === (1<<23)) { h = NaN; }
-        else if(xval < (1<<23)) { h = xval * 0.01; }
-        else { h = (xval - (1<<24)) * 0.01; }
-        // Mapbox Terrain-RGB encoding: value = Math.round((h + 10000) * 10)
-        if(isNaN(h)){
-          out.data[i]=128; out.data[i+1]=0; out.data[i+2]=0; out.data[i+3]=255;
-        } else {
-          const val = Math.round((h + 10000) * 10);
-          out.data[i] = (val >> 16) & 255;
-          out.data[i+1] = (val >> 8) & 255;
-          out.data[i+2] = val & 255;
-          out.data[i+3] = 255;
-        }
-      }
-      ctx.putImageData(out,0,0);
-      const blobOut = await c.convertToBlob({type:'image/png'});
-      return new Response(blobOut, {headers:{'Content-Type':'image/png'}});
-    })).catch(err=> new Response('Not found', {status:404}));
-  }
+const map = new maplibregl.Map({
+  container: 'map',
+  style: {version:8,sources:{},layers:[]},
+  center: [139.875,39.077],
+  zoom: 10,
+  pitch: 0,
+  bearing: 0,
+  maxPitch:85
 });
-`;
-  // register SW from blob
-  const swBlob = new Blob([swCode], {type:'application/javascript'});
-  const swUrl = URL.createObjectURL(swBlob);
-  try{
-    await navigator.serviceWorker.register(swUrl);
-    console.log('ServiceWorker registered for GSI DEM conversion');
-  }catch(e){ console.warn('SW register failed', e); }
 
-  // ベースソース / レイヤの準備
-  // 国土地理院 ラスタ: 標準 / 淡色 / 写真 / 陰影起伏 の URL は地理院タイル一覧に従う（例）
-  const gsiRaster = (type) => `https://cyberjapandata.gsi.go.jp/xyz/${type}/{z}/{x}/{y}.png`;
-  const gsiPhoto = (z,x,y) => `https://cyberjapandata.gsi.go.jp/xyz/ort/${z}/${x}/${y}.jpg`;
+// スケール表示
+const scaleEl = document.getElementById('scale');
+const scale = new maplibregl.ScaleControl({maxWidth:200,unit:'metric'});
+map.addControl(scale,'bottom-left');
 
-  // 追加ソース
-  map.addSource('gsi-std', { type:'raster', tiles:[gsiRaster('std')], tileSize:256 });
-  map.addSource('gsi-pale', { type:'raster', tiles:[gsiRaster('pale')], tileSize:256 });
-  map.addSource('gsi-photo', { type:'raster', tiles:['https://cyberjapandata.gsi.go.jp/xyz/ort/{z}/{x}/{y}.jpg'], tileSize:256 });
-  map.addSource('gsi-shade', { type:'raster', tiles:[gsiRaster('shaded_relief')], tileSize:256 });
-  map.addSource('osm-raster', { type:'raster', tiles:['https://tile.openstreetmap.org/{z}/{x}/{y}.png'], tileSize:256 });
+// ベースマップ用ソース／レイヤを作る（ラスタ中心）
+function addBaseLayers(){
+  // GSI 標準
+  map.addSource('gsi_std_src',{type:'raster',tiles:['https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png'],tileSize:256,attribution:'国土地理院'});
+  map.addLayer({id:'gsi_std',type:'raster',source:'gsi_std_src',layout:{visibility:'visible'}});
+  // 淡色
+  map.addSource('gsi_pale_src',{type:'raster',tiles:['https://cyberjapandata.gsi.go.jp/xyz/pale/{z}/{x}/{y}.png'],tileSize:256});
+  map.addLayer({id:'gsi_pale',type:'raster',source:'gsi_pale_src',layout:{visibility:'none'}});
+  // 写真
+  map.addSource('gsi_photo_src',{type:'raster',tiles:['https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/{z}/{x}/{y}.jpg'],tileSize:256});
+  map.addLayer({id:'gsi_photo',type:'raster',source:'gsi_photo_src',layout:{visibility:'none'}});
+  // OSM ラスタ
+  map.addSource('osm_raster_src',{type:'raster',tiles:['https://tile.openstreetmap.jp/{z}/{x}/{y}.png'],tileSize:256,attribution:'© OpenStreetMap contributors'});
+  map.addLayer({id:'osm_raster',type:'raster',source:'osm_raster_src',layout:{visibility:'none'}});
+  // OSM Bright JA (ラスタ版)
+  map.addSource('osm_bright_src',{type:'raster',tiles:['https://tile.openstreetmap.jp/styles/osm-bright-ja/{z}/{x}/{y}.png'],tileSize:256});
+  map.addLayer({id:'osm_bright',type:'raster',source:'osm_bright_src',layout:{visibility:'none'}});
+  // 国土地理院 最適化ベクトルタイル（簡易表示：ベクターソース＋簡易レイヤ）
+  map.addSource('gsi_optvec_src',{type:'vector',tiles:['https://cyberjapandata.gsi.go.jp/xyz/optimal_bvmap-v1/{z}/{x}/{y}.pbf'],minzoom:4,maxzoom:16});
+  // 簡易に「land」相当を塗る（タイルの実レイヤ名は変わる可能性あり）
+  map.addLayer({id:'gsi_optvec_land',type:'fill',source:'gsi_optvec_src','source-layer':'land',paint:{'fill-color':'#efe8d6'},layout:{visibility:'none'}});
+  map.addLayer({id:'gsi_optvec_road',type:'line',source:'gsi_optvec_src','source-layer':'road',paint:{'line-color':'#c66','line-width':1},layout:{visibility:'none'}});
+}
+map.on('load',()=>{
+  addBaseLayers();
 
-  // 最適化ベクトルタイル（PBF）ソース（GitHub / 公開 URL）
-  map.addSource('gsi-optimal-vector', {
-    type: 'vector',
-    tiles: ['https://cyberjapandata.gsi.go.jp/xyz/optimal_bvmap-v1/{z}/{x}/{y}.pbf'],
-    maxzoom: 16
-  });
+  // 陰影起伏図レイヤ（上に重ねる）
+  map.addSource('gsi_hill',{type:'raster',tiles:['https://cyberjapandata.gsi.go.jp/xyz/hillshademap/{z}/{x}/{y}.png'],tileSize:256});
+  map.addLayer({id:'gsi_hill_layer',type:'raster',source:'gsi_hill',paint:{'raster-opacity':0.6},layout:{visibility:'visible'}});
+});
 
-  // OSM ベクタースタイル（外部 style.json）を読み込むためのプレースホルダ
-  // 実際には style.json を fetch して map.setStyle する方法もあるが、ここではベース切替で簡潔に扱う
+// UI 操作
+document.getElementById('basemap').addEventListener('change',e=>{
+  const v=e.target.value;
+  const ids=['gsi_std','gsi_pale','gsi_photo','gsi_optvec_land','gsi_optvec_road','osm_raster','osm_bright'];
+  ids.forEach(id=>{ if(map.getLayer(id)) map.setLayoutProperty(id,'visibility','none'); });
+  if(v==='gsi_optvec'){ ['gsi_optvec_land','gsi_optvec_road'].forEach(id=>map.setLayoutProperty(id,'visibility','visible')); }
+  else map.setLayoutProperty(v,'visibility','visible');
+});
 
-  // 初期レイヤ（標準地図）
-  map.on('load', ()=> {
-    map.addLayer({ id:'base-gsi-std', type:'raster', source:'gsi-std', layout:{visibility:'visible'} }, null);
-    map.addLayer({ id:'shade', type:'raster', source:'gsi-shade', paint:{'raster-opacity':0.6}, layout:{visibility:'visible'} }, null);
+// 陰影コントロール
+document.getElementById('hill_opacity').addEventListener('input',e=>{
+  const v=parseFloat(e.target.value); if(map.getLayer('gsi_hill_layer')) map.setPaintProperty('gsi_hill_layer','raster-opacity',v);
+});
+document.getElementById('hill_on').addEventListener('change',e=>{
+  map.setLayoutProperty('gsi_hill_layer','visibility', e.target.checked ? 'visible' : 'none');
+});
+document.getElementById('hill_blend').addEventListener('change',e=>{
+  const mode=e.target.value;
+  // MapLibre は直接 blend mode をレイヤで指定できないため、canvas フィルタで代替
+  const canvas = map.getCanvas();
+  canvas.style.mixBlendMode = (mode==='multiply') ? 'multiply' : 'normal';
+});
 
-    // terrain 用の raster-dem ソース（ServiceWorker 経由の変換 URL）
-    map.addSource('gsi-dem-dem', {
-      type: 'raster-dem',
-      tiles: [location.origin + '/gsi-dem/{z}/{x}/{y}.png'],
-      tileSize: 256,
-      maxzoom: 14
-    });
-    // terrain は最初は無効
-    let terrainOn = false;
+// 折りたたみ
+document.getElementById('fold').addEventListener('click',()=>{
+  const c=document.getElementById('controls');
+  c.style.display = c.style.display==='none' ? 'block' : 'none';
+  document.getElementById('fold').textContent = c.style.display==='none' ? '▼ レイヤ操作' : '▲ レイヤ操作';
+});
 
-    // UI ハンドラ
-    document.getElementById('basemap').addEventListener('change', (e)=>{
-      const v = e.target.value;
-      // 全て非表示にしてから選択表示
-      ['base-gsi-std','base-gsi-pale','base-gsi-photo','base-osm-raster','base-gsi-optvec'].forEach(id=>{
-        if(map.getLayer(id)) map.setLayoutProperty(id,'visibility','none');
-      });
-      if(v==='gsi-std') map.setLayoutProperty('base-gsi-std','visibility','visible');
-      if(v==='gsi-pale'){
-        if(!map.getSource('gsi-pale')) map.addLayer({id:'base-gsi-pale', type:'raster', source:'gsi-pale'}, null);
-        map.setLayoutProperty('base-gsi-pale','visibility','visible');
+// --- DEM を MapLibre terrain 用に変換するプロトコル（国土地理院 DEM PNG -> TerrainRGB） ---
+// 国土地理院の DEM PNG エンコード仕様に合わせて変換する（クライアント変換）
+// 参考: 国土地理院 標高タイル仕様、MapLibre DEM 変換手法（addProtocol）を利用。
+maplibregl.addProtocol('gsidem', (params, callback) => {
+  const url = params.url.replace('gsidem://','');
+  const img = new Image(); img.crossOrigin = '';
+  img.onload = () => {
+    const w=img.width, h=img.height;
+    const canvas=document.createElement('canvas'); canvas.width=w; canvas.height=h;
+    const ctx=canvas.getContext('2d'); ctx.drawImage(img,0,0);
+    const id=ctx.getImageData(0,0,w,h);
+    const d=id.data;
+    // GSI DEM -> height (m): h = (R*256*256 + G*256 + B) * 0.01 ; special (128,0,0) = no-data ; if R>=128 subtract 2^24
+    // TerrainRGB encoding: height' = -10000 + value*0.1  => we need to map GSI height to TerrainRGB bytes
+    for(let i=0;i<d.length;i+=4){
+      const R=d[i], G=d[i+1], B=d[i+2];
+      if(R===128 && G===0 && B===0){
+        // no-data -> set to 0 height (encode as terrain value for -10000)
+        d[i]=0; d[i+1]=0; d[i+2]=0;
+        continue;
       }
-      if(v==='gsi-photo'){
-        if(!map.getLayer('base-gsi-photo')) map.addLayer({id:'base-gsi-photo', type:'raster', source:'gsi-photo'}, null);
-        map.setLayoutProperty('base-gsi-photo','visibility','visible');
-      }
-      if(v==='osm-raster'){
-        if(!map.getLayer('base-osm-raster')) map.addLayer({id:'base-osm-raster', type:'raster', source:'osm-raster'}, null);
-        map.setLayoutProperty('base-osm-raster','visibility','visible');
-      }
-      if(v==='gsi-optimal-vector'){
-        // 簡易的に最適化ベクトルの簡単なスタイルを追加（道路/水域など）
-        if(!map.getLayer('base-gsi-optvec')){
-          map.addLayer({ id:'base-gsi-optvec', type:'fill', source:'gsi-optimal-vector', 'source-layer':'land', paint:{'fill-color':'#e6e6e6'} }, null);
-        }
-        map.setLayoutProperty('base-gsi-optvec','visibility','visible');
-      }
-      if(v==='osm-vector'){
-        // 外部 style.json を読み込んで setStyle（注意: setStyle は既存のソース/レイヤを置換します）
-        fetch('https://tile.openstreetmap.jp/styles/osm-bright-ja/style.json').then(r=>r.json()).then(style=>{
-          // style の sources の tiles が相対の場合は調整が必要。ここでは簡易的に setStyle を呼ぶ
-          map.setStyle(style);
-        });
-      }
-    });
+      let x = R*65536 + G*256 + B;
+      if(R>=128) x = x - 16777216;
+      let hgt = x * 0.01; // meters (GSI)
+      // convert to TerrainRGB value: terrainHeight = -10000 + ((R_t*256*256 + G_t*256 + B_t) * 0.1)
+      // so we need value = (hgt + 10000) / 0.1
+      let val = Math.round((hgt + 10000) / 0.1);
+      if(val<0) val=0; if(val>16777215) val=16777215;
+      const Rt = (val >> 16) & 255;
+      const Gt = (val >> 8) & 255;
+      const Bt = val & 255;
+      d[i]=Rt; d[i+1]=Gt; d[i+2]=Bt;
+    }
+    ctx.putImageData(id,0,0);
+    canvas.toBlob(blob => {
+      blob.arrayBuffer().then(buf => callback(null, buf, null, null));
+    }, 'image/png');
+  };
+  img.onerror = () => callback(new Error('DEM load error'));
+  img.src = url;
+  return {cancel:()=>{}};
+});
 
-    // 陰影不透明度 / 合成モード
-    document.getElementById('shadeOpacity').addEventListener('input', (e)=>{
-      const v = parseFloat(e.target.value);
-      map.setPaintProperty('shade','raster-opacity', v);
-    });
-    document.getElementById('blendMode').addEventListener('change', (e)=>{
-      const mode = e.target.value;
-      const layer = map.getLayer('shade');
-      if(layer){
-        map.setPaintProperty('shade','raster-opacity', parseFloat(document.getElementById('shadeOpacity').value));
-        // MapLibre ではレイヤ合成は CSS mix-blend-mode を使う
-        const el = map.getCanvasContainer().querySelector('.mapboxgl-canvas');
-        // ここでは陰影レイヤのキャンバス要素を直接操作するのは難しいため、レイヤの DOM を探して style を変更
-        // 簡易実装: 全体キャンバスに blend を適用（注意: 他レイヤに影響する）
-        map.getCanvas().style.mixBlendMode = (mode==='multiply') ? 'multiply' : 'normal';
-      }
-    });
+// terrain ソースを追加（gsidem プロトコルを使う）
+function enableTerrain(exag){
+  if(map.getSource('gsi_dem')) return;
+  map.addSource('gsi_dem',{type:'raster-dem',tiles:['gsidem://https://cyberjapandata.gsi.go.jp/xyz/dem_png/{z}/{x}/{y}.png'],tileSize:256,encoding:'mapbox'});
+  map.setTerrain({source:'gsi_dem',exaggeration:exag});
+}
+function disableTerrain(){
+  try{ map.setTerrain(null); if(map.getSource('gsi_dem')) map.removeSource('gsi_dem'); }catch(e){}
+}
 
-    // 折りたたみ
-    document.getElementById('fold').addEventListener('click', ()=>{
-      const c = document.getElementById('controls');
-      if(c.style.display === 'none'){ c.style.display='block'; document.getElementById('fold').textContent='▲ レイヤ / ベース切替'; }
-      else { c.style.display='none'; document.getElementById('fold').textContent='▼ レイヤ / ベース切替'; }
-    });
-
-    // 地形 ON/OFF と倍率
-    document.getElementById('toggleTerrain').addEventListener('click', ()=>{
-      terrainOn = !terrainOn;
-      if(terrainOn){
-        map.setTerrain({source:'gsi-dem-dem', exaggeration: parseFloat(document.getElementById('exaggeration').value)});
-        document.getElementById('toggleTerrain').textContent='地形 OFF';
-      } else {
-        map.setTerrain(null);
-        document.getElementById('toggleTerrain').textContent='地形 ON';
-      }
-    });
-    document.getElementById('exaggeration').addEventListener('input', (e)=>{
-      const val = parseFloat(e.target.value);
-      if(terrainOn) map.setTerrain({source:'gsi-dem-dem', exaggeration: val});
-    });
-
-    // 初期表示のベースを設定
-    document.getElementById('basemap').value = 'gsi-std';
-    map.fire('move'); // scale update
-  });
-
-})();
+// terrain UI
+document.getElementById('terrain_on').addEventListener('change',e=>{
+  const on=e.target.checked;
+  if(on) enableTerrain(parseFloat(document.getElementById('exaggeration').value));
+  else disableTerrain();
+});
+document.getElementById('exaggeration').addEventListener('input',e=>{
+  const v=parseFloat(e.target.value);
+  if(map.getTerrain()) map.setTerrain({source:'gsi_dem',exaggeration:v});
+});
 </script>
 </body>
 </html>
